# Task-Oriented-Channel-Semantic-Map

./: .gitignore  CITATION.cff  README.md  THIRD_PARTY.md  pyproject.toml
configs/: baseline_registry.yaml  compute_allocation.yaml  core66_protocol.yaml  core66_selection.json  deepmimo_crosscity_macstudio.yaml  deepmimo_crosscity_macstudio_v2.yaml  deepmimo_probe.yaml  diagnostics_smoke.yaml  full_rt.yaml  full_rt_macstudio.yaml  full_rt_zhengyi.yaml  physics_probe.yaml  smoke.yaml
scripts/: __init__.py  audit_sionna_material_metadata.py  audit_support_sensitivity.py  bootstrap_mac_llvm.py  bootstrap_zhengyi.sh  build_core66_selection.py  compare_deepmimo_gate_versions.py  continue_zhengyi_after_shards.sh  finalize_delegated_full.sh  launch_zhengyi.cmd  merge_compute_artifacts.py  merge_core66_shards.py  merge_result_shard.py  package_result_shard.py  package_sionna_training_shard.py  recompute_sionna_convergence.py  run_core66_rt_worker.py  run_mac_studio.sh  run_sionna_sample_convergence.py  run_zhengyi_sharded_full.sh  run_zhengyi_wsl.sh  select_ray_budget.py  stage_training_shard.py
tcsm_rt/: __init__.py  audit.py  case_studies.py  cli.py  config.py  diagnostics.py  evaluation.py  external_audit.py  grid_learning.py  learning.py  metrics.py  physics.py  pipeline.py  provenance.py  sampling.py  schema.py  sionna_backend.py  training_state.py
tests/: test_baseline_registry.py  test_compute_shards.py  test_convergence_metrics.py  test_core66_protocol.py  test_deepmimo_adapter.py  test_diagnostics.py  test_evaluation_schema.py  test_external_audit.py  test_models.py  (+9 more)
(+12 files in other folders)
